...
        style={styles.button}
        title="Focus text input"
        onPress={handleFocusButtonPress}
      />
      <Button
        style={styles.button}
        title={"Set text"}
        onPress={handleSetText}
      />
    </>
  );
};

...
