appId: "com.maskedtextinputexample"
---
- launchApp
- tapOn:
    id: "phone-input"
- tapOn: "+1 (000) 000-0000"
- tapOn: "Set text"
- assertVisible: "+1 (999) 999"
- assertVisible: "formatted value +1 (999) 999"
